Fixes:
- Fixed notch position not updating when docking/undocking MacBook (screen resolution changes)